things to fix
